# DevOps-Group-Project

./: .coverage  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_CHECKLIST.md  README.md  ShopSmart.postmal_collection.json  api.py  azure-pipelines-backend.yml  azure-pipelines-frontend.yml  azure-pipelines.yml  azure_pipelines.yml  main.py  models.py  pytest.ini  requirements.txt  router.py  service.py  setup-azure.sh  telemetry.py
api/: .coverage  .dockerignore  .env.example  .gitignore  COMPARE_ALGORITHM_DOCUMENTATION.md  Dockerfile  ERROR_HANDLING_DOCUMENTATION.md  GET_ENDPOINTS_DOCUMENTATION.md  INTEGRATION_TESTING_DOCUMENTATION.md  NORMALIZATION_DOCUMENTATION.md  README.md  README_POSTMAN.md  ROUTES_WIRING_DOCUMENTATION.md  SCAFFOLD_VERIFICATION.md  SCHEMAS_DOCUMENTATION.md  TESTING_DOCUMENTATION.md  alembic.ini  docker-compose.yml  postman_collection.json  postman_environment.json  pyproject.toml  requirements.txt  run.py  start.sh
api/alembic/: env.py
api/alembic/versions/: aa91ec3623ad_initial_schema_products_supermarkets_.py  b1a9d3f4c8e1_add_shopping_lists.py  b2c3d4e5f6g7_seed_initial_data.py  c3d4e5f6g7_add_shopping_lists.py
api/app/: __init__.py  config.py  db.py  main.py  middleware.py  models.py  schemas.py  telemetry.py
api/app/routes/: catalog.py  compare.py  debug.py  health.py  metrics.py  prices.py  products.py  refresh.py  scraper.py  scraper_debug.py  shopping_lists.py  supermarkets.py
api/app/services/: catalog_service.py  metrics.py  (+9 more)
api/docs/: ARCHITECTURE.md  TESTING.md
api/scrapers/: __init__.py  alcampo_scraper.py  base.py  carrefour_scraper.py  dia_scraper.py  gadis_scraper.py  lidl_scraper.py  manager.py  mercadona_scraper.py
api/tests/: conftest.py
(+111 files in other folders)
